
2008-03-05 tdb
 * Added missing mysql_version_from_dbh method, fixing #3301

2008-03-07 tdb
 * Revised lookup scripts to work with Oracle/abstracted results rendering into
    an Extras method
 * Put javascripts inside CDATA sections, fixing #3303
 * Added childNodes and firstChild to XML::DOM
 * Don't use a SIG handler when making calls - breaks eval() wrappers in
    libraries
 * Tool to create unlimited number of randomly-generated eprints

2008-03-11 tdb
 * Modified oai_accesslog to export all datasets
 * Fixed bug in Repository::call always returning an array

2008-03-12 tdb
 * Added datestamp to metafields
 * Merged r3371 and r3368 - support for http_* config variables
 * More database quoting fixes: added _update and _update_quoted methods to
    Database.pm, don't INSERT-UPDATE for INSERT (for performance)
 * index_queue can now take multiple field name values
 * Oracle doesn't support multiple VALUES inserts
 * Make more use of multi-value insert calls to insert()

2008-03-14 tdb
 * Added --enable-web-imports option to bin/import
 * Added a "wget" method to EPrints::Utils to retrieve items from the Web
 * Only create one revision when creating new eprint objects

2008-03-14 cjg
 * Fixed a couple of http_url items in the template which needed to be 
    perl_url
 * (Re-fixed above to http_cgiurl)

2008-03-14 cjg
 * Added show_zero_results option to search config. which if true still
    shows the search results even if there is zero results. Closing #3278
    although it might want a nicer message later.

2008-03-17 tdb
 * Use syswrite to avoid buffered IO problems with file writing

2008-03-18 tdb
 * Don't return utf8 objects from tree_to_utf8 (much faster)
 * Performance tweaks: pass arrays rather than building hashes if not needed,
    $field_conf is always an object in MetaField::Compound
 * Fixed get_ids_by_field_values for cross-database, removed mk_time & mk_date
    and added "get_id_from_value" method to MetaFields
 * Alpha batch-editing plug-in
